# ChangeLog for dev-db/freetds
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/freetds/ChangeLog,v 1.35 2007/06/24 19:14:10 armin76 Exp $

  24 Jun 2007; Raúl Porcel <armin76@gentoo.org> freetds-0.64.ebuild:
  x86 stable wrt #178027

  18 Sep 2006; Steev Klimaszewski <steev@gentoo.org> freetds-0.64.ebuild:
  Keywording freetds-0.64 ~x86-fbsd. Flameeyes said I could keyword things
  that I use.

*freetds-0.64 (23 Jul 2006)

  23 Jul 2006; Luca Longinotti <chtekk@gentoo.org> metadata.xml,
  -freetds-0.61-r1.ebuild, -freetds-0.62.1.ebuild, freetds-0.62.3.ebuild,
  -freetds-0.62.4.ebuild, -freetds-0.63.ebuild, +freetds-0.64.ebuild:
  Version bump, cleanup old ebuilds, cleanup existing ebuilds.

*freetds-0.63 (04 Sep 2005)

  04 Sep 2005; Stuart Herbert <stuart@gentoo.org> +freetds-0.63.ebuild:
  Version bump, fix deps

  20 Feb 2005; Hardave Riar <hardave@gentoo.org> freetds-0.62.3.ebuild:
  Stable on mips

*freetds-0.62.4 (18 Feb 2005)

  18 Feb 2005; Sebastian Bergmann <sebastian@gentoo.org>
  +freetds-0.62.4.ebuild:
  Version bump.

  29 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  01 Nov 2004; Lars Weiler <pylon@gentoo.org> freetds-0.62.3.ebuild:
  Stable on ppc for PHP5, Bug #60442.

  11 Oct 2004; Guy Martin <gmsoft@gentoo.org> freetds-0.62.3.ebuild:
  Marked stable on hppa.

  27 Sep 2004; Gustavo Zacarias <gustavoz@gentoo.org> freetds-0.62.3.ebuild:
  Stable on sparc

  19 Aug 2004; Tom Gall <tgall@gentoo.org> freetds-0.62.3.ebuild:
  stable on ppc64

  03 Jul 2004; Bryan Østergaard <kloeri@gentoo.org> freetds-0.62.3.ebuild:
  Stable on alpha.

  29 Jun 2004; Aron Griffis <agriffis@gentoo.org> freetds-0.61-r1.ebuild,
  freetds-0.62.1.ebuild, freetds-0.62.3.ebuild:
  glibc -> libc

  27 May 2004; Stuart Herbert <stuart@gentoo.org> freetds-0.62.3.ebuild:
  Marked stable on x86
