@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pymssql
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pymssql/ChangeLog,v 1.9 2007/06/24 19:15:11 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pymssql/ChangeLog,v 1.10 2007/06/24 22:35:18 angelos Exp $
+
+  24 Jun 2007; Christoph Mende <angelos@gentoo.org> pymssql-0.7.4.ebuild:
+  Stable on amd64 wrt bug 178027
 
   24 Jun 2007; Raúl Porcel <armin76@gentoo.org> pymssql-0.7.4.ebuild:
   x86 stable wrt #178027
