@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/freetds
 # Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/freetds/ChangeLog,v 1.35 2007/06/24 19:14:10 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/freetds/ChangeLog,v 1.36 2007/06/24 22:34:41 angelos Exp $
+
+  24 Jun 2007; Christoph Mende <angelos@gentoo.org> freetds-0.64.ebuild:
+  Stable on amd64 wrt bug 178027
 
   24 Jun 2007; Raúl Porcel <armin76@gentoo.org> freetds-0.64.ebuild:
   x86 stable wrt #178027
